# mbmesh

./: .gitignore  CMakeLists.txt  README.md  __init__.py  animation.py  blenderexport.py  mbanim2text.cpp  mbmesh.cpp  mbmesh.h  mbmesh2text.cpp  mesh.py
